src/scss/components/table/cardgrid.scss
.cardgrid-component {
  width: calc(100% + 32px);
  height: 100%;
  max-width: 100%;
  position: relative;
  overflow: hidden;

  &.is-dragging {
    cursor: url(https://mail.google.com/mail/images/2/closedhand.cur), move;
    cursor: -webkit-grabbing;
    cursor: -moz-grabbing;
    cursor: -webkit-grabbing, -moz-grabbing, url(https://mail.google.com/mail/images/2/closedhand.cur), move;

    *,
    a {
      cursor: url(https://mail.google.com/mail/images/2/closedhand.cur), move;
      cursor: -webkit-grabbing;
      cursor: -moz-grabbing;
      cursor: -webkit-grabbing, -moz-grabbing, url(https://mail.google.com/mail/images/2/closedhand.cur), move;
    }
  }

  .datagrid-tables-container,
  .datagrid-header-container,
  .datagrid-header-container .datagrid-table-fixed-wrapper,
  .datagrid-header-container .datagrid-table-block,
  .datagrid-body-container .datagrid-table-row.datagrid-hover {
    background-color: transparent;
    box-shadow: none;
    border: none;
    overflow: unset;
  }

  .datagrid-table-row {
    cursor: default;

    &.datagrid-header-row {
      background-color: transparent;
      overflow-x: unset;
    }

    &.datagrid-hover,
    &:hover {
      background-color: transparent;
    }
  }

  .datagrid-header-cell {
    background-color: transparent;
    padding: 16px 0 0;

    &:first-child {
      padding-left: 16px;

      .table-header-cell-content {
        border-top-left-radius: 8px;
      }
    }

    &:last-child {
      padding-right: 16px;

      .table-header-cell-content {
        border-top-right-radius: 8px;
      }
    }

    .table-header-cell-content {
      background-color: #fff;
      box-shadow: 0 0 20px rgba(0, 0, 0, 0.08);
    }

    &:hover .table-header-cell-content {
      background-color: #fff;
    }

    &.active .table-header-cell-content {
      z-index: 1;
      background-color: #9e9e9e;
      border-color: #9e9e9e;

      * {
        color: #fff !important;
      }

       .carrot {
        display: none;
      }
    }

    .carrot {
      z-index: 2;
      position: absolute;
      height: 100%;
      top: 16px;
      right: -12px;
      background: transparent url('../../../images/card-header-carrot.png') center right no-repeat;
      width: 28px;
      height: 60px;

      &.active {
        display: none;
      }
    }

    &.active .carrot.active {
      display: inline-block;
      background: transparent url('../../../images/card-header-carrot-active.png') center right no-repeat;
      width: 29px;
      height: 60px;
    }

    &.last .carrot {
      display: none;

      &.active {
        display: none;
      }
    }
  }

  .table-header-cell-content {
    height: 100%;
    display: flex;
    align-items: center;
  }

  .header-cell {
    overflow: hidden;
    padding: 5px 5% 5px 40px;

    &.cell {
      padding: 10px 5% 10px 30px;
    }

    .title {
      font-size: 13px;
      font-weight: 600;
      line-height: normal;
      color: #0c0d0d;
      width: 100%;
      overflow: hidden;
      white-space: nowrap;
      overflow: hidden;
      text-overflow: ellipsis;
    }

    .total {
      font-size: 13px;
      font-weight: 600;
      line-height: normal;
      color: #696e6f;
    }
  }

  &.cardgrid-columns {
    .datagrid-header-cell {
      padding: 16px 16px 0;

      .table-header-cell-content {
        border-radius: 8px 8px 0 0;
      }
    }
  }
}

.datagrid-cell.is-last .cell-content {
  border-radius: 0 0 8px 8px;
  border-bottom: none !important;
}

.cardgrid-component-model-cell {
  cursor: url(https://mail.google.com/mail/images/2/openhand.cur), move;
  cursor: -webkit-grab;
  cursor: -moz-grab;
  cursor: -webkit-grab, -moz-grab, url(https://mail.google.com/mail/images/2/openhand.cur), move;
  position: relative;
  height: 100%;
  padding: 0 16px;

  .cell-content {
    height: 100%;
    position: relative;
    padding: 16px 20px;
    border-bottom: 1px solid rgba(144, 151, 153, 0.16);
    box-shadow: 0 0 20px rgba(0, 0, 0, 0.08);
    background-color: #fff;

    &:hover {
      background-color: rgba(144, 151, 153, 0.16);
    }
  }

  &.is-current .cell-content {
    background: rgba(144, 151, 153, 0.16);
  }

  &.hide {
    opacity: 0;
  }

  &.animating-drag-shadow.drag-shadow .shadow-model-cover,
  &.shadow-model.drag-shadow .shadow-model-cover {
    display: none;
  }

  &.drag-shadow {
    position: absolute;
    padding-left: 30px;
    padding-right: 10px;
    z-index: 1000;
    -ms-transform: rotate(3deg);
    -webkit-transform: rotate(3deg);
    transform: rotate(3deg);
    cursor: url(https://mail.google.com/mail/images/2/closedhand.cur), move;
    cursor: -webkit-grabbing;
    cursor: -moz-grabbing;
    cursor: -webkit-grabbing, -moz-grabbing, url(https://mail.google.com/mail/images/2/closedhand.cur), move;

    .cell-content {
      background-color: #fff;
    }

    .title {
      cursor: url(https://mail.google.com/mail/images/2/closedhand.cur), move;
      cursor: -webkit-grabbing;
      cursor: -moz-grabbing;
      cursor: -webkit-grabbing, -moz-grabbing, url(https://mail.google.com/mail/images/2/closedhand.cur), move;
    }

    &.rotate-back {
      -ms-transform: none;
      -webkit-transform: none;
      transform: none;
      -webkit-transition: -webkit-transform 0.2s;
      transition: transform 0.2s;
    }
  }

  &.animating-drag-shadow .cell-content,
  &.shadow-model .cell-content {
    border: 2px dashed rgba(43, 65, 178, 0.16);
  }

  &.animating-drag-shadow .shadow-model-cover,
  &.shadow-model .shadow-model-cover {
    position: absolute;
    width: 100%;
    height: 100%;
    left: 0;
    top: 0;
    background-color: #fff;
  }

  &.animating-drag-shadow .cell-content {
    background-color: #dee3ff;
  }

  .click-area {
    cursor: pointer;
    position: absolute;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
  }

  .title {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    position: relative;
    display: inline-block;
    font-weight: 700;
    font-size: 13px;
    line-height: 24px;
    color: #0c0d0d;
    cursor: pointer;
    max-width: -webkit-calc(100% - 25px);
    max-width: calc(100% - 25px);
    vertical-align: middle;

    &:hover {
      text-decoration: underline;
    }

    &.is-completed {
      color: #9e9e9e;
      text-decoration: line-through;
    }
  }

  .account-assignee,
  .monetary-value {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    font-size: 12px;
    line-height: 20px;
    color: #696e6f;
  }

  .account-assignee.monetary-value,
  .monetary-value.monetary-value {
    min-height: 14px;
  }
}

.cardgrid-component {
  .datagrid-cell {
    border: none;
  }

  .datagrid-tables-container .datagrid-table-row {
    border: none;
    border-bottom: none;
  }
}

